temporary crutch for scrollbar issue

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -23,6 +23,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 47px 0 0 0;
+  overflow-x: hidden;
 }
 
 html {
